# blog

./: .gitignore  README.md
fastapi-genai/: code.ipynb  pyproject.toml  readme.md
fastapi-genai/code/: main.py
fastapi-genai/code/service/: main.py
genai-faiss-reactagent/: .gitignore  README.md  code.ipynb  main.py  pyproject.toml
kubernetes_admission_webhook/: go.mod  go.sum  main.go
kubernetes_admission_webhook/handlers/: validate_deployment.go
kubernetes_admission_webhook/yamls/: ValidatingWebhook.yaml  deployment-nginx.yaml  kubechange-namespace.yaml
