[tool.poetry]
name = "fastapi-genai-lanchain"
version = "0.1.0"
description = ""
authors = ["Victor Nascimento <victooyooth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.5"
pypdf = "^5.1.0"
langchain-openai = "^0.2.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
