[tool.poetry]
name = "fastapi-genai-react-faiss"
version = "0.1.0"
description = ""
authors = ["Victor Nascimento <victooyooth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
faiss-cpu = "^1.9.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
